--- a/Minecraft_QQ/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ/SetWindow/QQSet.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="QQ群设置" Height="90" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/img/icon.ico">
+        Title="QQ群设置" Height="90" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/Properties/icon.ico">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
