--- a/Minecraft_QQ/SetWindow/Window1.xaml
+++ b/Minecraft_QQ/SetWindow/Window1.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-        Title="Minecraft_QQ" Height="450" Width="750" Icon="/Minecraft_QQ;component/img/icon.ico" ResizeMode="NoResize">
+        Title="Minecraft_QQ" Height="450" Width="750" Icon="/Minecraft_QQ;component/Properties/icon.ico" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
