--- a/Minecraft_QQ/SetWindow/ServerSet.xaml
+++ b/Minecraft_QQ/SetWindow/ServerSet.xaml
@@ -1,12 +1,85 @@
 ﻿<Window x:Class="Minecraft_QQ.SetWindow.ServerSet"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Minecraft_QQ.SetWindow"
         mc:Ignorable="d"
         Title="服务器配置文件" Height="521" Width="861" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/Properties/icon.ico">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/CheckBox.xaml"/>
+                <ResourceDictionary Source="Style/Label.xaml"/>
+                <ResourceDictionary Source="Style/TextBox.xaml"/>
+                <ResourceDictionary Source="Style/RadioButton.xaml"/>
+                <ResourceDictionary Source="Style/GroupBox.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-
+        <GroupBox Header="加入消息" Margin="10,10,655,380">
+            <Grid>
+                <CheckBox Content="启用" IsChecked="{Binding Join.sendQQ}"
+                          Style="{DynamicResource Check}" Margin="5,5,0,0" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="38"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding Join.Message}" Margin="5,24,5,5" Foreground="Black"
+                         Background="#225EBDD3"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="退出消息" Margin="10,110,655,280">
+            <Grid>
+                <CheckBox Content="启用" IsChecked="{Binding Quit.sendQQ}"
+                    Style="{DynamicResource Check}" Margin="5,5,0,0" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="38"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding Quit.Message}" Margin="5,24,5,5" Foreground="Black"
+                    Background="#225EBDD3"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="跳服消息" Margin="10,210,655,180">
+            <Grid>
+                <CheckBox Content="启用" IsChecked="{Binding ChangeServer.sendQQ}"
+                    Style="{DynamicResource Check}" Margin="5,5,0,0" HorizontalAlignment="Left" Width="38" Height="14" VerticalAlignment="Top"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ChangeServer.Message}" Margin="5,24,5,5" Foreground="Black"
+                    Background="#225EBDD3"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="加入消息" Margin="198,10,279,180">
+            <Grid>
+                <Label Content="服务器名字" Style="{DynamicResource Label}" 
+                       Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="71"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.ServerName}" Margin="72,5,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="17" VerticalAlignment="Top" HorizontalAlignment="Left" Width="109"/>
+                <Label Content="检测头" Style="{DynamicResource Label}" Margin="0,24,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="71"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.Check}" Margin="72,29,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="17" VerticalAlignment="Top" HorizontalAlignment="Left" Width="109"/>
+                <Label Content="发送至群格式" Style="{DynamicResource Label}" Margin="0,48,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="83"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.Message}" Margin="5,72,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="33" VerticalAlignment="Top" HorizontalAlignment="Left" Width="176"/>
+                <Label Content="发送至服务器格式" Style="{DynamicResource Label}" Margin="0,105,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="107"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.Say}" Margin="5,129,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="33" VerticalAlignment="Top" HorizontalAlignment="Left" Width="176"/>
+                <Label Content="显示子服人数格式" Style="{DynamicResource Label}" Margin="0,162,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="107"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.SendOneByOneMessage}" Margin="5,186,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="33" VerticalAlignment="Top" HorizontalAlignment="Left" Width="176"/>
+                <Label Content="在线人数格式" Style="{DynamicResource Label}" Margin="188,0,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="83"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.PlayerListMessage}" Margin="193,24,0,0" Foreground="Black"
+                    Background="#225EBDD3" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="176"/>
+                <Label Content="服务器在线格式" Style="{DynamicResource Label}" Margin="187,56,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding ServerSet.ServerOnlineMessage}" Margin="193,80,5,0" Foreground="Black"
+                    Background="#225EBDD3" Height="33" VerticalAlignment="Top"/>
+                <Label Content="服务器模式" Style="{DynamicResource Label}" Margin="187,113,0,0" 
+                    Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96"/>
+                <RadioButton Content="模式0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="193,138,0,0" Name="Mode1"
+                             Style="{DynamicResource RadioButton_Left}" Foreground="Black" Click="Click_" Width="58"/>
+                <RadioButton Content="模式1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="251,138,0,0" Name="Mode2"
+                             Style="{DynamicResource RadioButton_Middle}" Foreground="Black" Click="Click_" Width="60"/>
+                <RadioButton Content="模式2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="309,138,0,0" Name="Mode3"
+                    Style="{DynamicResource RadioButton_Right}" Foreground="Black" Click="Click_" Width="60"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
