--- a/Minecraft_QQ_Gui/App.xaml
+++ b/Minecraft_QQ_Gui/App.xaml
@@ -1,9 +1,21 @@
 ﻿<Application x:Class="Minecraft_QQ_Gui.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Minecraft_QQ_Gui"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/Button.xaml"/>
+                <ResourceDictionary Source="Style/CheckBox.xaml"/>
+                <ResourceDictionary Source="Style/ContextMenu.xaml"/>
+                <ResourceDictionary Source="Style/Label.xaml"/>
+                <ResourceDictionary Source="Style/ListView.xaml"/>
+                <ResourceDictionary Source="Style/TextBox.xaml"/>
+                <ResourceDictionary Source="Style/TabControl.xaml"/>
+                <ResourceDictionary Source="Style/PasswordBox.xaml"/>
+                <ResourceDictionary Source="Style/GroupBox.xaml"/>
+                <ResourceDictionary Source="Style/RadioButton.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
