--- a/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
@@ -4,30 +4,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-         Title="服务器指令设置" Height="149.25" Width="343.5" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/Properties/icon.ico">
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/ListView.xaml"/>
-                <ResourceDictionary Source="Style/Label.xaml"/>
-                <ResourceDictionary Source="Style/TextBox.xaml"/>
-                <ResourceDictionary Source="Style/CheckBox.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+         Title="服务器指令设置" Height="149.25" Width="343.5" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
-        <Label Content="触发" Margin="10,5,294,90" 
+        <Label Content="触发" Margin="10,5,299,103" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,8,134,92" TextWrapping="Wrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3"/>
-        <CheckBox Content="附带参数" Margin="10,101,263,5"
+        <TextBox Margin="44,8,140,109" TextWrapping="Wrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3"/>
+        <CheckBox Content="附带参数" Margin="10,101,264,19"
                   Style="{DynamicResource Check}" IsChecked="{Binding Command.Pr}"/>
-        <CheckBox Content="玩家使用" Margin="10,63,263,43"
+        <CheckBox Content="玩家使用" Margin="10,63,264,57"
                   Style="{DynamicResource Check}" IsChecked="{Binding Command.Use}"/>
-        <CheckBox Content="玩家发送" Margin="10,82,263,24"
+        <CheckBox Content="玩家发送" Margin="10,82,264,38"
                   Style="{DynamicResource Check}" IsChecked="{Binding Command.Send}"/>
-        <Label Content="指令" Margin="10,36,294,59" 
+        <Label Content="指令" Margin="10,36,299,71" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,38,134,62" TextWrapping="Wrap" Text="{Binding Command.Command}" Foreground="Black" Background="#225EBDD3"/>
+        <TextBox Margin="44,38,140,78" TextWrapping="Wrap" Text="{Binding Command.Command}" Foreground="Black" Background="#225EBDD3"/>
         <ListView Margin="209,5,10,5" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
                   x:Name="ServerList">
             <ListView.View>
