--- a/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
@@ -4,19 +4,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="ID设置" Height="65" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/Properties/icon.ico">
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/Label.xaml"/>
-                <ResourceDictionary Source="Style/TextBox.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+        Title="ID设置" Height="65" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
-        <Label Content="ID" Margin="10,6,181,5" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="52,11,10,8" TextWrapping="Wrap" Text="{Binding ID}" Foreground="Black" Background="#225EBDD3"/>
+        <Label Content="ID" Margin="10,6,0,0" 
+               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" Width="29" Height="22" VerticalAlignment="Top"/>
+        <TextBox Margin="39,8,0,0" TextWrapping="Wrap" Text="{Binding ID}" Foreground="Black"
+                 Background="#225EBDD3" HorizontalAlignment="Left" Width="158" Height="18" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
