--- a/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
@@ -4,26 +4,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="QQ群设置" Height="90" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/Properties/icon.ico">
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/Label.xaml"/>
-                <ResourceDictionary Source="Style/TextBox.xaml"/>
-                <ResourceDictionary Source="Style/CheckBox.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+        Title="QQ群设置" Height="90" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
-        <Label Content="群号" Margin="10,6,170,30" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,8,10,33" TextWrapping="Wrap" Text="{Binding Obj.群号}" Foreground="Black" Background="#225EBDD3"/>
-        <CheckBox Content="主群" Margin="150,35,26,12"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Obj.主群}"/>
-        <CheckBox Content="启用命令" Margin="10,35,142,12"
-            Style="{DynamicResource Check}" IsChecked="{Binding Obj.启用命令}"/>
-        <CheckBox Content="开启对话" Margin="80,35,72,12"
-            Style="{DynamicResource Check}" IsChecked="{Binding Obj.开启对话}"/>
+        <Label Content="群号" Margin="10,6,0,0" 
+               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="34"/>
+        <TextBox Margin="44,10,0,0" TextWrapping="Wrap" Text="{Binding Obj.群号}" Foreground="Black" 
+                 Background="#225EBDD3" HorizontalAlignment="Left" Width="166" Height="18" VerticalAlignment="Top"/>
+        <CheckBox Content="主群" Margin="150,35,0,0"
+                  Style="{DynamicResource Check}" IsChecked="{Binding Obj.主群}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="44"/>
+        <CheckBox Content="启用命令" Margin="10,35,0,0"
+            Style="{DynamicResource Check}" IsChecked="{Binding Obj.启用命令}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="68"/>
+        <CheckBox Content="开启对话" Margin="80,35,0,0"
+            Style="{DynamicResource Check}" IsChecked="{Binding Obj.开启对话}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="68"/>
 
     </Grid>
 </Window>
