--- a/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
@@ -4,22 +4,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-         Title="服务器指令设置" Height="149.25" Width="343.5" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
+         Title="服务器指令设置" Height="175" Width="360" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
-        <Label Content="触发" Margin="10,5,299,103" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,8,140,109" TextWrapping="Wrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3"/>
-        <CheckBox Content="附带参数" Margin="10,101,264,19"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Pr}"/>
-        <CheckBox Content="玩家使用" Margin="10,63,264,57"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Use}"/>
-        <CheckBox Content="玩家发送" Margin="10,82,264,38"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Send}"/>
-        <Label Content="指令" Margin="10,36,299,71" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,38,140,78" TextWrapping="Wrap" Text="{Binding Command.Command}" Foreground="Black" Background="#225EBDD3"/>
-        <ListView Margin="209,5,10,5" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
-                  x:Name="ServerList">
+        <Label Content="触发" Margin="10,5,0,0" 
+               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox Margin="44,9,0,0" TextWrapping="Wrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3"
+                 HorizontalAlignment="Left" Width="160" Height="18" VerticalAlignment="Top"/>
+        <CheckBox Content="附带参数" Margin="10,95,0,0"
+                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Pr}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="70"/>
+        <CheckBox Content="玩家使用" Margin="10,57,0,0"
+                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Use}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="70"/>
+        <CheckBox Content="玩家发送" Margin="10,76,0,0"
+                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Send}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="70"/>
+        <Label Content="指令" Margin="10,30,0,0" 
+               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox Margin="44,34,0,0" TextWrapping="Wrap" Text="{Binding Command.Command}" Foreground="Black" Background="#225EBDD3" 
+                 HorizontalAlignment="Left" Width="160" Height="18" VerticalAlignment="Top"/>
+        <ListView Margin="209,5,0,0" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
+                  x:Name="ServerList" Height="124" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="服务器列表" Width="100" DisplayMemberBinding="{Binding StringFormat=string}"/>
