--- a/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
@@ -6,6 +6,8 @@
         mc:Ignorable="d"
         Title="玩家设置" Height="140" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
+        <Button Content="保存" Margin="139,81,0,0" HorizontalAlignment="Left" Width="53" Height="15" VerticalAlignment="Top"
+                Foreground="Black" IsDefault="True" Click="Button_Click"/>
         <Label Content="QQ号" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="42"/>
         <TextBox Margin="52,10,0,0" TextWrapping="Wrap" Text="{Binding PlayerObj.QQ号}" 
