--- a/Minecraft_QQ_Gui/SetWindow/MessageSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/MessageSet.xaml
@@ -6,6 +6,8 @@
         mc:Ignorable="d"
         Title="消息设置" Height="205" Width="315" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
+        <Button Content="保存" Margin="10,140,0,0" HorizontalAlignment="Left" Width="37" Height="15" VerticalAlignment="Top"
+                Foreground="Black" IsDefault="True" Click="Button_Click"/>
         <Label Content="检测" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBox Margin="52,11,0,0" TextWrapping="Wrap" Text="{Binding Server.Name}" Foreground="Black" 
