--- a/Minecraft_QQ_Gui/SetWindow/ServerName.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/ServerName.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-       Title="服务器名字设置" Height="98" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
+       Title="服务器名字设置" Height="98" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico" KeyDown="Window_KeyDown">
     <Grid>
         <Label Content="名字" Margin="6,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="43"/>
