--- a/Minecraft_QQ_Gui/MainWindow.xaml
+++ b/Minecraft_QQ_Gui/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-        Title="Minecraft_QQ" Height="462" Width="764" Icon="/Color_yr.ico" ResizeMode="CanMinimize" Closing="Window_Closing" KeyDown="Window_KeyDown">
+        Title="Minecraft_QQ" Height="462" Width="764" ResizeMode="CanMinimize" Closing="Window_Closing" KeyDown="Window_KeyDown" Icon="/Minecraft_QQ.png">
     <Window.Background>
         <ImageBrush Stretch="Uniform" ImageSource="/Minecraft_QQ.jpg"/>
     </Window.Background>
