--- a/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
@@ -6,6 +6,7 @@
         mc:Ignorable="d"
          Title="服务器指令设置" Height="175" Width="360" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
     <Grid>
+        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="触发" Margin="10,5,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBox Margin="44,9,0,0" TextWrapping="Wrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3"
