--- a/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
@@ -6,6 +6,7 @@
         mc:Ignorable="d"
         Title="ID设置" Height="75" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico" KeyDown="TextBox_KeyDown">
     <Grid>
+        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="ID" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" Width="29" Height="22" VerticalAlignment="Top"/>
         <TextBox Margin="39,10,0,0" TextWrapping="Wrap" Text="{Binding ID}" Foreground="Black"
