--- a/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
@@ -6,6 +6,7 @@
         mc:Ignorable="d"
         Title="QQ群设置" Height="95" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico" KeyDown="Window_KeyDown">
     <Grid>
+        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="群号" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="34"/>
         <TextBox Margin="44,10,0,0" TextWrapping="Wrap" Text="{Binding Obj.群号}" Foreground="Black" 
