--- a/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="玩家设置" Height="140" Width="220" ResizeMode="NoResize" Background="White" Icon="/Color_yr.ico">
+        Title="玩家设置" Height="140" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ.png">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Button Content="保存" Margin="139,81,0,0" HorizontalAlignment="Left" Width="53" Height="15" VerticalAlignment="Top"
